--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ Django==2.1.2
 django-heroku==0.3.1
 gunicorn==19.9.0
 # uncomment psycopg2-binary if you use PostgreSQL as your database
-# psycopg2-binary==2.7.4
+psycopg2-binary==2.7.4
 pytz==2018.3
 whitenoise==4.1
