--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+node_modules/
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -114,3 +115,5 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+staticfiles/
