--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,6 @@ gunicorn==19.9.0
 # uncomment psycopg2-binary if you use PostgreSQL as your database
 psycopg2-binary==2.7.4
 pytz==2018.3
+social-auth-app-django==3.1.0
+social-auth-core==2.0.0
 whitenoise==4.1
